[package]
name = "alexa-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
home = "0.5.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
